@@ -3,11 +3,15 @@ package seedu.address.model;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static seedu.address.logic.commands.CommandTestUtil.VALID_ADDRESS_BOB;
-import static seedu.address.logic.commands.CommandTestUtil.VALID_TAG_HUSBAND;
+import static seedu.address.logic.commands.CommandTestUtil.VALID_COURSE_CS2103T;
 import static seedu.address.testutil.Assert.assertThrows;
-import static seedu.address.testutil.TypicalPersons.ALICE;
-import static seedu.address.testutil.TypicalPersons.getTypicalAddressBook;
+import static seedu.address.testutil.TypicalAddressBook.getTypicalAddressBook;
+import static seedu.address.testutil.TypicalConsultations.CONSULT_1;
+import static seedu.address.testutil.TypicalConsultations.CONSULT_2;
+import static seedu.address.testutil.TypicalLessons.LESSON_1;
+import static seedu.address.testutil.TypicalLessons.LESSON_2;
+import static seedu.address.testutil.TypicalStudents.ALICE;
+import static seedu.address.testutil.TypicalStudents.BENSON;
 
 import java.util.Arrays;
 import java.util.Collection;
@@ -18,9 +22,15 @@ import org.junit.jupiter.api.Test;
 
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
-import seedu.address.model.person.Person;
-import seedu.address.model.person.exceptions.DuplicatePersonException;
-import seedu.address.testutil.PersonBuilder;
+import seedu.address.model.consultation.Consultation;
+import seedu.address.model.consultation.exceptions.ConsultationNotFoundException;
+import seedu.address.model.lesson.Lesson;
+import seedu.address.model.lesson.exceptions.LessonNotFoundException;
+import seedu.address.model.student.Student;
+import seedu.address.model.student.exceptions.DuplicateStudentException;
+import seedu.address.testutil.ConsultationBuilder;
+import seedu.address.testutil.LessonBuilder;
+import seedu.address.testutil.StudentBuilder;
 
 public class AddressBookTest {
 
@@ -28,7 +38,7 @@ public class AddressBookTest {
 
     @Test
     public void constructor() {
-        assertEquals(Collections.emptyList(), addressBook.getPersonList());
+        assertEquals(Collections.emptyList(), addressBook.getStudentList());
     }
 
     @Test
@@ -44,64 +54,228 @@ public class AddressBookTest {
     }
 
     @Test
-    public void resetData_withDuplicatePersons_throwsDuplicatePersonException() {
-        // Two persons with the same identity fields
-        Person editedAlice = new PersonBuilder(ALICE).withAddress(VALID_ADDRESS_BOB).withTags(VALID_TAG_HUSBAND)
+    public void resetData_withDuplicateStudents_throwsDuplicateStudentException() {
+        // Two students with the same identity fields
+        Student editedAlice = new StudentBuilder(ALICE).withCourses(VALID_COURSE_CS2103T)
                 .build();
-        List<Person> newPersons = Arrays.asList(ALICE, editedAlice);
-        AddressBookStub newData = new AddressBookStub(newPersons);
+        List<Student> newStudents = Arrays.asList(ALICE, editedAlice);
+        AddressBookStub newData = new AddressBookStub(newStudents, List.of(), List.of());
 
-        assertThrows(DuplicatePersonException.class, () -> addressBook.resetData(newData));
+        assertThrows(DuplicateStudentException.class, () -> addressBook.resetData(newData));
     }
 
     @Test
-    public void hasPerson_nullPerson_throwsNullPointerException() {
-        assertThrows(NullPointerException.class, () -> addressBook.hasPerson(null));
+    public void removeStudent_validStudent_alsoRemovedFromConsultsAndLessons() {
+        // setup
+        AddressBook addressBooks = new AddressBook();
+        addressBooks.addStudent(ALICE);
+        Consultation consultWithAlice = new ConsultationBuilder().withStudent(ALICE).build();
+        Lesson lessonWithAlice = new LessonBuilder().withStudent(ALICE).build();
+        addressBooks.addConsult(consultWithAlice);
+        addressBooks.addLesson(lessonWithAlice);
+        // remove ALICE
+        assert addressBooks.hasStudent(ALICE);
+        addressBooks.removeStudent(ALICE);
+        // check for no ALICE
+        Consultation resultConsult = addressBooks.getConsultList().get(0);
+        Lesson resultLesson = addressBooks.getLessonList().get(0);
+        assertFalse(addressBooks.hasStudent(ALICE));
+        assertFalse(resultConsult.hasStudent(ALICE));
+        assertFalse(resultLesson.hasStudent(ALICE));
     }
 
     @Test
-    public void hasPerson_personNotInAddressBook_returnsFalse() {
-        assertFalse(addressBook.hasPerson(ALICE));
+    public void hasStudent_nullStudent_throwsNullPointerException() {
+        assertThrows(NullPointerException.class, () -> addressBook.hasStudent(null));
     }
 
     @Test
-    public void hasPerson_personInAddressBook_returnsTrue() {
-        addressBook.addPerson(ALICE);
-        assertTrue(addressBook.hasPerson(ALICE));
+    public void hasStudent_studentNotInAddressBook_returnsFalse() {
+        assertFalse(addressBook.hasStudent(ALICE));
     }
 
     @Test
-    public void hasPerson_personWithSameIdentityFieldsInAddressBook_returnsTrue() {
-        addressBook.addPerson(ALICE);
-        Person editedAlice = new PersonBuilder(ALICE).withAddress(VALID_ADDRESS_BOB).withTags(VALID_TAG_HUSBAND)
+    public void hasStudent_studentInAddressBook_returnsTrue() {
+        addressBook.addStudent(ALICE);
+        assertTrue(addressBook.hasStudent(ALICE));
+    }
+
+    @Test
+    public void hasStudent_studentWithSameIdentityFieldsInAddressBook_returnsTrue() {
+        addressBook.addStudent(ALICE);
+        Student editedAlice = new StudentBuilder(ALICE).withCourses(VALID_COURSE_CS2103T)
                 .build();
-        assertTrue(addressBook.hasPerson(editedAlice));
+        assertTrue(addressBook.hasStudent(editedAlice));
     }
 
     @Test
-    public void getPersonList_modifyList_throwsUnsupportedOperationException() {
-        assertThrows(UnsupportedOperationException.class, () -> addressBook.getPersonList().remove(0));
+    public void setStudent_validStudent_alsoUpdatedInConsultationsAndLessons() {
+        // setup
+        AddressBook addressBooks = new AddressBook();
+        addressBooks.addStudent(ALICE);
+        Consultation consultWithAlice = new ConsultationBuilder().withStudent(ALICE).build();
+        Lesson lessonWithAlice = new LessonBuilder()
+                .withStudent(ALICE)
+                .withAttendanceAndParticipation(ALICE, true, 5)
+                .build();
+        addressBooks.addConsult(consultWithAlice);
+        addressBooks.addLesson(lessonWithAlice);
+        // Edit ALICE to BENSON
+        assert addressBooks.hasStudent(ALICE);
+        addressBooks.setStudent(ALICE, BENSON);
+        // Check for no ALICE
+        Consultation resultConsult = addressBooks.getConsultList().get(0);
+        Lesson resultLesson = addressBooks.getLessonList().get(0);
+        assertFalse(addressBooks.hasStudent(ALICE));
+        assertFalse(resultConsult.hasStudent(ALICE));
+        assertFalse(resultLesson.hasStudent(ALICE));
+        // Check for BENSON
+        assertTrue(addressBooks.hasStudent(BENSON));
+        assertTrue(resultConsult.hasStudent(BENSON));
+        assertTrue(resultLesson.hasStudent(BENSON));
+        assertTrue(resultLesson.getAttendance(BENSON));
+        assertEquals(resultLesson.getParticipation(BENSON), 5);
+    }
+
+    @Test
+    public void hasConsult_nullConsult_throwsNullPointerException() {
+        assertThrows(NullPointerException.class, () -> addressBook.hasConsult(null));
+    }
+
+    @Test
+    public void hasConsult_consultNotInAddressBook_returnsFalse() {
+        assertFalse(addressBook.hasConsult(new ConsultationBuilder().build()));
+    }
+
+    @Test
+    public void hasConsult_consultInAddressBook_returnsTrue() {
+        Consultation consult = new ConsultationBuilder().build();
+        addressBook.addConsult(consult);
+        assertTrue(addressBook.hasConsult(consult));
+    }
+
+    @Test
+    public void hasConsult_consultWithSameDetailsInAddressBook_returnsTrue() {
+        Consultation consult = new ConsultationBuilder().build();
+        Consultation copy = new ConsultationBuilder(consult).build();
+        addressBook.addConsult(consult);
+        assertTrue(addressBook.hasConsult(copy));
+    }
+
+    @Test
+    public void setConsult_allValidArguments_success() {
+        addressBook.addConsult(CONSULT_1);
+        assertTrue(addressBook.hasConsult(CONSULT_1));
+        assertFalse(addressBook.hasConsult(CONSULT_2));
+        addressBook.setConsult(CONSULT_1, CONSULT_2);
+        assertFalse(addressBook.hasConsult(CONSULT_1));
+        assertTrue(addressBook.hasConsult(CONSULT_2));
+    }
+
+    @Test
+    public void setConsult_nullArgument_throwsNullPointerException() {
+        assertThrows(NullPointerException.class, () -> addressBook.setConsult(null, null));
+        assertThrows(NullPointerException.class, () -> addressBook.setConsult(null, CONSULT_1));
+        assertThrows(NullPointerException.class, () -> addressBook.setConsult(CONSULT_1, null));
+    }
+
+    @Test
+    public void setConsult_consultNotFound_throwsConsultationNotFoundException() {
+        // Ensure consult does not exist in the address book
+        assertFalse(addressBook.hasConsult(CONSULT_1));
+        assertThrows(ConsultationNotFoundException.class, () -> addressBook.setConsult(CONSULT_1, CONSULT_2));
+    }
+
+    @Test
+    public void hasLesson_nullLesson_throwsNullPointerException() {
+        assertThrows(NullPointerException.class, () -> addressBook.hasLesson(null));
+    }
+
+    @Test
+    public void hasLesson_lessonNotInAddressBook_returnsFalse() {
+        assertFalse(addressBook.hasLesson(new LessonBuilder().build()));
+    }
+
+    @Test
+    public void hasLesson_lessonInAddressBook_returnsTrue() {
+        Lesson lesson = new LessonBuilder().build();
+        addressBook.addLesson(lesson);
+        assertTrue(addressBook.hasLesson(lesson));
+    }
+
+    @Test
+    public void hasLesson_lessonWithSameDetailsInAddressBook_returnsTrue() {
+        Lesson lesson = new LessonBuilder().build();
+        Lesson copy = new LessonBuilder(lesson).build();
+        addressBook.addLesson(lesson);
+        assertTrue(addressBook.hasLesson(copy));
+    }
+
+    @Test
+    public void setLesson_allValidArguments_success() {
+        addressBook.addLesson(LESSON_1);
+        assertTrue(addressBook.hasLesson(LESSON_1));
+        assertFalse(addressBook.hasLesson(LESSON_2));
+        addressBook.setLesson(LESSON_1, LESSON_2);
+        assertFalse(addressBook.hasLesson(LESSON_1));
+        assertTrue(addressBook.hasLesson(LESSON_2));
+    }
+
+    @Test
+    public void setLesson_nullArgument_throwsNullPointerException() {
+        assertThrows(NullPointerException.class, () -> addressBook.setLesson(null, null));
+        assertThrows(NullPointerException.class, () -> addressBook.setLesson(null, LESSON_1));
+        assertThrows(NullPointerException.class, () -> addressBook.setLesson(LESSON_2, null));
+    }
+
+    @Test
+    public void setLesson_lessonNotFound_throwsLessonNotFoundException() {
+        // Ensure lesson does not exist in the address book
+        assertFalse(addressBook.hasLesson(LESSON_1));
+        assertThrows(LessonNotFoundException.class, () -> addressBook.setLesson(LESSON_1, LESSON_2));
+    }
+
+    @Test
+    public void getStudentList_modifyList_throwsUnsupportedOperationException() {
+        assertThrows(UnsupportedOperationException.class, () -> addressBook.getStudentList().remove(0));
     }
 
     @Test
     public void toStringMethod() {
-        String expected = AddressBook.class.getCanonicalName() + "{persons=" + addressBook.getPersonList() + "}";
+        String expected = AddressBook.class.getCanonicalName()
+                + "{students=" + addressBook.getStudentList()
+                + ", consults=" + addressBook.getConsultList()
+                + ", lessons=" + addressBook.getLessonList() + "}";
         assertEquals(expected, addressBook.toString());
     }
 
     /**
-     * A stub ReadOnlyAddressBook whose persons list can violate interface constraints.
+     * A stub ReadOnlyAddressBook whose students list can violate interface constraints.
      */
     private static class AddressBookStub implements ReadOnlyAddressBook {
-        private final ObservableList<Person> persons = FXCollections.observableArrayList();
+        private final ObservableList<Student> students = FXCollections.observableArrayList();
+        private final ObservableList<Consultation> consults = FXCollections.observableArrayList();
+        private final ObservableList<Lesson> lessons = FXCollections.observableArrayList();
 
-        AddressBookStub(Collection<Person> persons) {
-            this.persons.setAll(persons);
+        AddressBookStub(Collection<Student> students, Collection<Consultation> consults, Collection<Lesson> lessons) {
+            this.students.setAll(students);
+            this.consults.setAll(consults);
+            this.lessons.setAll(lessons);
         }
 
         @Override
-        public ObservableList<Person> getPersonList() {
-            return persons;
+        public ObservableList<Student> getStudentList() {
+            return students;
+        }
+
+        @Override
+        public ObservableList<Consultation> getConsultList() {
+            return consults;
+        }
+
+        @Override
+        public ObservableList<Lesson> getLessonList() {
+            return lessons;
         }
     }
 
